# bota_ft_sensor_driver

./: README.md  ft.sh  reset.sh  udp_transport.xml
bota_driver/rokubimini/config/: rokubimini_sensor.yaml
bota_driver/rokubimini_ethercat/include/rokubimini_ethercat/soem_interface/: EthercatBusBase.hpp
bota_driver/rokubimini_ethercat/launch/: rokubimini_ethercat.launch.py
soem/: CMakeLists.txt  README.md  package.xml
